--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -1,4 +1,9 @@
 .title {
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+
     text-align: left;
     padding: 5%;
 }
@@ -9,4 +14,18 @@
 
 .paragraph {
     font-size: 20px;
+}
+
+#homeModel {
+    /* width: 500px; */
+    height: 700px;
+}
+
+#home {
+    width: 100%;
+    height: 100%;
+    min-height: 700px;
+
+    position: relative;
+
 }
