--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -1,13 +1,3 @@
-.title {
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-
-    text-align: left;
-    padding: 5%;
-}
-
 .header {
     font-size: 100px;
 }
@@ -17,8 +7,26 @@
 }
 
 #homeModel {
-    /* width: 500px; */
+    position: absolute;
+
+    /* Centers the content */
+    top: 50%;
+    right: 0px;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    
+    width: 500px;
     height: 700px;
+}
+
+.title {
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+
+    text-align: left;
+    padding: 5%;
 }
 
 #home {
