--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -30,8 +30,8 @@
 }
 
 #home {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     min-height: 700px;
 
     position: relative;
