--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -19,9 +19,12 @@
     height: 700px;
 }
 
-#viewShopsBtn {
-    min-height: 400px;
-    min-width: 400px;
+#viewShops {
+    /* min-height: 400px; */
+    /* min-width: 400px; */
+    width: 100%;
+    height: 400px;
+    border: 3px solid black
 }
 
 .title {
