--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -37,3 +37,21 @@
     position: relative;
 
 }
+
+.panel {
+    padding: 10px;
+    margin: 10px;
+    width: 100%;
+    
+    background-color: rgba(255,255,255,.6);
+    border-radius: 5px;
+    border: 3px solid rgba(145, 145, 145, 0.433);
+}
+
+.note {
+    background-color: rgba(145, 145, 145, 0.433);
+    padding: 5px;
+    margin: 5px;
+    border-radius: 4px;
+    max-width: 20%;
+}
