--- a/src/components/pages/Profile/Profile.css
+++ b/src/components/pages/Profile/Profile.css
@@ -1,5 +1,6 @@
 .avatarImg {
-    border-style: solid;
+    border: 3px solid rgba(0,0,0,0.3);
+    box-shadow: 0px 10px 20px black;
     min-width: 300px;
     min-height: 300px;
     left: 37.8%;
