--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -41,11 +41,12 @@
 .panel {
     padding: 10px;
     margin: 10px;
+    margin-top: 100px;
     width: 100%;
     
-    background-color: rgba(255,255,255,.6);
-    border-radius: 5px;
-    border: 3px solid rgba(145, 145, 145, 0.433);
+    /* background-color: rgba(255,255,255,.6); */
+    /* border-radius: 5px; */
+    /* border: 3px solid rgba(145, 145, 145, 0.433); */
 }
 
 .note {
