--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
     transform: rotate(360deg);
   }
 }
+
+#background {
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+}
