--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -1,3 +1,13 @@
+
+#background {
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    overflow: hidden;
+}
+
 .header {
     font-size: 100px;
 }
