When clicking on a card, the card will now display its image in full screen

--- a/src/components/store/item-crud/cards/Card.css
+++ b/src/components/store/item-crud/cards/Card.css
@@ -2,3 +2,10 @@
     max-width: 200px;
     max-height: 200px;
 }
+
+.cardImg-Big {
+    width: 80%;
+    overflow: hidden;
+    height: auto;
+    object-fit: scale-down;
+}
